fixed the spacing

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ aside {
 	padding-left: 15px;
 	margin-left: 15px;
 	background-color: var(--mainBrown);
-	height: 753px;
+	min-height: 100%;
 	color: whitesmoke;
 }
 
@@ -53,7 +53,6 @@ button {
     color: var(--mainBrown);
     font-size: 26px;
     display: flex;
-    justify-content: space-between;
 }
 
 #header button {
